Hadoop Change Log

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

  OPTIMIZATIONS

    HADOOP-12810. FileSystem#listLocatedStatus causes unnecessary RPC calls
    (Ryan Blue via vinayakumarb)

  BUG FIXES

    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12374. Updated expunge command description.
    (WeiWei Yang via eyang)

    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
    time unit parameter. (zxu via rkanter)

    HADOOP-12482. Race condition in JMX cache update. (Tony Wu via lei)

    HADOOP-12565. Replace DSA with RSA for SSH key type in SingleCluster.md.
    (Mingliang Liu via aajisaka)

    HADOOP-12602. TestMetricsSystemImpl#testQSize occasionally fails.
    (Masatake Iwasaki via aajisaka)

    HADOOP-12588. Fix intermittent test failure of TestGangliaMetrics.
    (Masatake Iwasaki via aajisaka)

    HADOOP-12107. long running apps may have a huge number of StatisticsData
    instances under FileSystem (Sangjin Lee via Ming Ma)

    HADOOP-12706. TestLocalFsFCStatistics#testStatisticsThreadLocalDataCleanUp
    times out occasionally (Sangjin Lee and Colin Patrick McCabe via jlowe)

    HADOOP-12761. incremental maven build is not really incremental (sjlee)

    HADOOP-12772. NetworkTopologyWithNodeGroup.getNodeGroup() can loop
    infinitely for invalid 'loc' values (Kuhu Shukla via kihwal)

    HADOOP-12792. TestUserGroupInformation#testGetServerSideGroups fails in
    chroot (Eric Badger via jlowe)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
